--- a/src/index.html
+++ b/src/index.html
@@ -11,34 +11,7 @@
     </head>
     <body>
         <div class="page">
-            <section id="app1">
-                <div>
-                    <span id="number">100</span>
-                    <div class="output"></div>
-                </div>
-                <div>
-                    <button id="add1">+1</button>
-                    <button id="minus1">-1</button>
-                    <button id="mul2">*2</button>
-                    <button id="divide2">/2</button>
-                </div>
-            </section>
-            <section id="app2">
-                <ul class="tab-bar">
-                    <li>1</li>
-                    <li>2</li>
-                </ul>
-                <ul class="tab-content">
-                    <li>内容1</li>
-                    <li>内容2</li>
-                </ul>
-            </section>
-            <section id="app3">
-                <div class="square"></div>
-            </section>
-            <section id="app4">
-                <div class="circle"></div>
-            </section>
+            <section id="app1"></section>
         </div>
         <script src="main.js" type="module"></script>
     </body>
